# AI_Learning_Navigator

./: CMakeLists.txt  Makefile  README.md  build_windows.bat  run_windows.bat
include/: algorithms.hpp  data.hpp  main.hpp  models.hpp
src/: algorithms.cpp  data.cpp
tests/: test_algorithms.cpp
